Almost got the basic CSV builder working

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+#rubymine Files
+.idea/NLVX_CSV.iml
+.idea/modules.xml
+.idea/scopes/
+.idea/vcs.xml
+.idea/workspace.xml
