--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ build/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+#Omitted files - we never want to upload these
+test.csv
+.env
+
 #rubymine Files
 .idea/NLVX_CSV.iml
 .idea/modules.xml
